# iPIC3D-CPU-SPACE-CoE

./: .gitignore  CMakeLists.txt  FIX-ENERGY.md  NOTES-PETSC.md  NOTES-ecsim.md  NOTES-grid.md  NOTES-log.md  NOTES-matrix.md  NOTES-output.md  README.md  build.sh  iPIC3D.cpp  phase10h_results_20.json  phase10h_results_20.txt  phase10h_results_40.json  phase10h_results_40.txt  phase10h_results_80.json  phase10h_results_80.txt  phase10i_results_smoke.json  phase10i_results_smoke.txt  phase4-diagnostic.patch  pixi.toml  plan-tsc.md  pyproject.toml
.github/workflows/: build.yml  build.yml.disabled  ci.yml  easybuild.yml  easybuild.yml.disabled
bc/: BcFields3D.cpp
communication/: Com3DNonblk.cpp
fields/: EMfields3D.cpp
grids/: Grid3DCU.cpp
include/: Basic.h  BcFields3D.h  Collective.h  Com3DNonblk.h  EMfields3D.h  Grid3DCU.h  Neighbouring_Nodes.h  PETSC.h  PSKOutput.h  PSKhdf5adaptor.h  Particles3D.h  Particles3Dcomm.h  PetscSolver.h  iPic3D.h  input_array.h
inputfiles/: AdjointProbe.inp  AlfvenWave.inp  AlfvenWave_np4.inp  AuditAllOpen_false.inp  AuditAllOpen_true.inp  AuditPeriodicY0_false.inp  AuditPeriodicY0_true.inp  CMakeLists.txt  DoubleGEM_drift.inp  DoubleGEM_match.inp  Double_Harris.inp  Double_Harris_PETSc.inp  Double_Harris_PETSc_helm.inp  Double_Harris_PETSc_prec.inp  Double_Harris_test.inp  LangmuirWave.inp  LangmuirWave_np4.inp  NumericalHeating.inp  NumericalHeating_np4.inp  ObliqueAlfvenWave.inp  ObliqueAlfvenWave_np4.inp  PerfNp4.inp  PerfNp4xy.inp  PlaneEMWave.inp  PlaneEMWave_np4.inp  Reconnection.inp  Reconnection_np4.inp  Relativistic_Double_Harris_ion_electron.inp  SmoothProbe.inp  SmoothProbe_bare.inp  SmoothProbe_nofixhalo.inp  SmoothProbe_nounify.inp  TwoStream.inp  TwoStream_np4.inp  Uniform_match.inp  Weibel.inp  Weibel_np4.inp  WhistlerPacket.inp  WhistlerPacket_np4.inp  ci_energy_gem.inp  (+38 more)
inputoutput/: ParallelIO.cpp
main/: Collective.cpp  iPIC3Dlib.cpp
particles/: Particles3D.cpp  Particles3Dcomm.cpp
postprocessing_tools/: compress.sh
postprocessing_tools/python/: Extract2D_slices.py  Extract_3D_CS.py  HDF_to_VTK.py  Plot2D_slice_field.py  Plot2D_slice_moment.py  Plot_E_2D.py  Plot_J_2D.py  Plot_rho_2D.py  erase_data.py  erase_restart.py
scripts/: analyze_M_stages.py  analyze_dispersion.py  analyze_growth_rate.py  analyze_heating.py  analyze_landau.py  analyze_reconnection.py  analyze_satellites.py  check_prec_iters.py  diff_C_localize.py  diff_M_edge.py  diff_M_ghost.py  diff_alpha_paths.py  diff_corner_mxx.py  diff_cycle1_fields.py  diff_maxwell_paired.py  diff_maxwell_stages.py  diff_xrank_stages.py  e19_bisect_flags.sh  extract_profile.py  gen_v2_inputs.sh  log_patterns.py  movie_oblique_alfven.py  movie_operator.py  movie_physics_test.py  parse_long_energy.py  phase10c_compare.py  phase10c_spectral.py  phase10e_scaling.py  phase10f_bisection.py  phase10h_smoother.py  phase10i_kernel.py  phase10j_dmd.py  phase8_bench.sh  plot_energy.py  plot_field_comparison.py  plot_fields.py  plot_krylov_bench.py  plot_ksp_diagnostics.py  plot_l2_timeseries.py  plot_preconditioner.py  (+14 more)
solvers/: GMRES.cpp  PETSC.cpp  PetscSolver.cpp
tests/: aggregate_profiles.py  bench_krylov.sh  bench_preconditioners.sh  bench_stiffness.sh  common.sh  make_movie.sh  make_operator_movie.sh  make_petsc_movie.sh  plot_energy.py  plot_field_comparison.py  plot_l2_timeseries.py  plot_petsc_energy.py  plot_petsc_test_results.py  plot_petsc_visual_comparison.py  plot_results_common.py  plot_scaling.py  plot_single_grid.py  plot_theme.py  plot_timing.py  plot_timing_common.py  plot_utils.py  test.sh  test_energy.sh  test_helm.sh  test_petsc.sh  test_petsc_scaling.sh  test_physics.sh  test_restart.sh
utility/: Basic.cpp  MPIdata.cpp  debug.cpp  errors.cpp
